--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ header {
     /* 背景設定 */
     width: 100%;
     height: 100vh;
-    background: url(noen.jpg); /* 背景画像 */
+    background: url(images/noen.png); /* 背景画像 */
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
