--- a/style.css
+++ b/style.css
@@ -502,3 +502,8 @@ background-color: lightskyblue;
     padding-bottom: 50px;
 }
 
+footer {
+  margin-top: 50px;
+  align-items: center;
+  text-align: center;
+}
